styles/table.styl
@import './global.styl'
@import './var.styl'

.u-table
	overflow: scroll
	&-td
		&:first-child
			border-left-width:  0px
			font-weight normal
		&:last-child
			border-right-width:  0px
	&-td-fixed
		&-left
			left 0
			position sticky
			&::after
				position absolute
				content: ''
				top 0
				width 100px
				height 100%
				right 0
				transform: translateX(100%)
				box-shadow: inset 10px 0 8px -8px #00000026
		&-right
			right 0
			position sticky
			&::after
				position absolute
				content: ''
				top 0
				width 100px
				height 100%
				left 0
				transform: translateX(-100%)
				box-shadow: inset  -10px 0px 8px -8px #00000026

	&-head
		width 100%
		&-tr
			background-color #fafafc
			font-weight 500
		& td
			background-color #fafafc
			&:first-child
				font-weight 500
				
	&-body
		width 100%
		&-tr
			background-color #fff
			font-weight normal
		& td
			background-color: #fff
			&:first-child
				font-weight normal

